--- a/index.html
+++ b/index.html
@@ -94,20 +94,17 @@
     data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true">
     <div class="wrapper">
       <h2 class="section__title">About me<span class="full-stop">.</span></h2>
-      <p class="section__text">Hello, I'm a curiosity-driven <strong>front-end developer</strong> with a background in art.
-        The Internet is where I learnt a lot of useful skills and now I want to contribute by building things for the
-        web.
-        I love combining my passion for design with my technical knowledge to
-        create <b>functional and good looking products</b> without sacrificing creativity.</p>
-      <div class="section__text">As a developer, the qualities I strive to implement in my products include:
+      <p class="section__text">Hello, I'm a curiosity-driven <strong>front-end developer</strong> currently working for the Italian company <a class="section__link" href="https://www.blastness.com/en/index" target="_blank">Blastness.</a></p>
+      <div class="section__text">I love combining my passion for design with my technical knowledge to create functional and good looking products without sacrificing creativity. The qualities I strive to implement in my products include:
+      </div>
+      <div class="section__text">
         <ul class="section__list">
           <li>An intuitive and satisfying <strong>user experience</strong>.</li>
           <li>A <strong>simple and thoughtful design</strong>. </li>
           <li>Clean and <strong>maintainable code</strong>.</li>
         </ul>
       </div>
-      <div class="section__text">I'm excited to keep learning and refining my skills with the right company.
-        Feel free to reach out and say hello.</div>
+      <div class="section__text">If you would like to connect, feel free to reach out and say hello.</div>
       <div class="button-container"><a href="#contact"><button class="button button--about" >Get in touch</button></a></div>
     </div>
     <!--costum shape divider-->
@@ -153,6 +150,11 @@
         </div>
 
         <div class="box">
+          <i class="box__icon devicon-php-plain"></i>
+          <p class="box__label">PHP</p>
+        </div>
+
+        <div class="box">
           <i class="box__icon devicon-git-plain"></i>
           <p class="box__label">Git</p>
         </div>
@@ -195,8 +197,8 @@
         </div>
 
         <div class="box">
-          <i class="box__icon devicon-inkscape-plain"></i>
-          <p class="box__label">Inkscape</p>
+          <i class="box__icon devicon-xd-line"></i>
+          <p class="box__label">Adobe XD</p>
         </div>
 
         <div class="box">
@@ -206,11 +208,6 @@
           <p class="box__label">Responsive <br> design</p>
         </div>
 
-        <div class="box">
-          <!--icon from https://www.svgrepo.com-->
-          <img class="box__img" src="/images/w3c-svgrepo-com.svg" alt="W3C icon">
-          <p class="box__label">Accesibility</p>
-        </div>
       </div>
     </div>
 
